<resources>
    <string name="app_name">Radio</string>
    <string name="choose_title">"Choose Radio Station"</string>
    <string name="setTime">%1$d:</string>
    <string name="hit">XIT FM</string>
    <string name="kiss">KISS FM</string>
    <string name="rocks">Radio Rocks</string>
    <string name="nrj">Energy</string>
    <string name="russkoe">Русское Радио</string>
    <string name="retro"> Ретро ФМ</string>
    <string name="gti">GTI Radio</string>
    <string name="dj">DJFM</string>
    <string name="bumblebee">BumbleBee</string>
    <string name="nashe">Наше Радио</string>
    <string name="melodia">Радио Мелодия</string>
    <string name="bisnes">Бизнес Радио</string>
    <string name="mfm">MFM</string>
    <string name="shanson">Радио Шансон</string>
    <string name="lux">Люкс Радио</string>
    <string name="pjatnizza">Радио Пятница</string>
    <string name="relax">Relax FM</string>
    <string name="avto">Авторадио</string>
    <integer name="com_vk_sdk_AppId">5609374 </integer>
    <string name="time_format_string">HH:mm</string>
    <string name="date_format_string">dd-MM-yyyy</string>
    <string name="no_internet_connection_dialog_message">PleaseConnect to working Internet connection</string>
    <string name="no_internet_connection_dialog_title">Internet Connection Error</string>
    <string name="wait_message">Wait</string>
    <string name="vk_authorization">VKLogin</string>
    <string name="search_in_action_bar">Search</string>
    <string name="vkLogout">LogOut vk</string>
    <string name="ToastLogoutVk">You Log Out VK</string>
    <string name="downloadSongDrawerItem">Download Song</string>
    <string name="addInVkList">Add in Vk List</string>
    <string name="strShowMoreResults">Show More Results</string>
    <string name="strEmptySearchREsult">Empty Search Result</string>
    <string name="actionBarTitleSearchMoreResults">Search Result</string>
    <string name="navigationSendMail">Send mail</string>
    <string name="buttonPlay">Play And Pause Button</string>
    <string name="buttonChooseTimeLess">&lt;</string>
    <string name="buttonChooseTimeMore">&gt;</string>
    <string name="drawer_NoPlayedSong">No Song</string>
    <string name="drawer_PlayedSong_time">--:--</string>
    <string name="toast_externalStorage_not_available">External Storage is not available</string>
    <string name="toast_CheckInternetException">something went wrong. Please check your internet connection</string>
</resources>
